--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,14 +3,17 @@ site_name: Majorli's Blogs
 site_author: MajorLi
 
 nav:
-        - Home: 'index.md'
+        - Home: index.md
         - Projects:
-                - 'C++算法编程指南': projects/algo_guide.md
+                - projects/algo_guide.md
         - Algorithms:
-                - '基础数值算法':
-                        - notes/algos/basic_numeric_algos/prime_algos.md
-                        - notes/algos/basic_numeric_algos/integer_algos.md
-                        - notes/algos/basic_numeric_algos/number_repr_algos.md
+                - notes/algos/overview.md
+                - 数值算法:
+                        - notes/algos/numeric_algos/prime_algos.md
+                        - notes/algos/numeric_algos/integer_algos.md
+                        - notes/algos/numeric_algos/number_repr_algos.md
+        - Data Structures:
+                - notes/data_struct/overview.md
 
 theme:
         name: material
