--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,7 @@ theme:
 
 markdown_extensions:
         - admonition
+        - attr_list
         - toc:
                 permalink: true
         - pymdownx.highlight:
