--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,7 +53,7 @@ markdown_extensions:
         - pymdownx.tabbed
 
 plugins:
-        - search
+        #        - search
 
 extra_javascript:
         - https://cdn.bootcss.com/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML
