--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
                 - notes/algos/overview.md
                 - notes/algos/prime_algos.md
                 - notes/algos/kth.md
+                - notes/algos/perm_comb.md
 
 theme:
         name: material
