--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ nav:
         - Home: 
                 - index.md
                 - 更博日志:
-                        - journal.md
+                        - journal_may_2020.md
                         - journal_apr_2020.md
         - Projects:
                 - projects/algo_guide.md
